k8s_configurations/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osuclassy-backend-deployment
  namespace: osuclassy-dev
  labels:
    app: osuclassy-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: osuclassy-backend
  template:
    metadata:
      labels:
        app: osuclassy-backend
    spec:
      containers:
        - name: osuclassy-backend
          image: fauzanardh/osuclassy-backend
          imagePullPolicy: Never # Will error out if not set, because the image is build locally
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: osuclassy-backend-service
  namespace: osuclassy-dev
spec:
  selector:
    app: osuclassy-backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
