k8s_configurations/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: osuclassy-dev
spec:
  selector:
    matchLabels:
      app: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - image: postgres:14
          name: database
          ports:
            - containerPort: 5432
              name: db
          volumeMounts:
            - name: db-persistent-storage
              mountPath: /var/lib/postgresql
      volumes:
        - name: db-persistent-storage
          persistentVolumeClaim:
            claimName: db-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: db-service
  namespace: osuclassy-dev
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
