k8s_configurations/osuclassy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: osuclassy-ingress
  namespace: osuclassy-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: osuclassy-dev.com
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: osuclassy-backend-service
                port:
                  number: 8000
